--- a/main.html
+++ b/main.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <h1>Intro to Time and Space Complexity</h1>
+    <p>Time Complexity is so efficient</p>
+    <p><b>Space Complexity</b> must have the O(n)</p>
+    
 </body>
-
 </html>
