--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Intro to Time and Space Complexity</h1>
-    <p>Time Complexity is so efficient</p>
+    <p>Time complexity is so efficient</p>
     <p><b>Space Complexity</b> must have the O(n)</p>
     
 </body>
